# CodeToQuery

./: .gitignore  README.md
backend/: .env.example  .gitignore  alembic.ini  create_test_user.py  pyproject.toml  pytest.ini  recreate_test_user.py  requirements-test.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20240615_000000_initial_migration.py  20240615_000001_add_cost_and_status_to_queries.py  20240618_000002_add_user_authentication.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py  dependencies.py
backend/app/core/: __init__.py  config.py  database.py  errors.py  logging.py  security.py
backend/app/models/: __init__.py  analysis_run.py  codebase.py  diagnostic.py  execution_plan.py  group.py  location.py  project.py  query.py  suggestion.py  user.py
backend/app/repositories/: __init__.py  analysis_repository.py  base_repository.py  project_repository.py  query_repository.py  user_repository.py
backend/app/schemas/: __init__.py  analysis_run.py  codebase.py  diagnostic.py  group.py  project.py  query.py  suggestion.py  user.py
backend/app/services/: auth_service.py
backend/app/services/diagnostics/: __init__.py  code_aware_diagnostics.py  diagnostic_service.py  rule_engine.py  rule_registry.py
backend/app/tasks/: __init__.py  analysis_task.py  analysis_tasks.py  explain_task.py  extraction_task.py
backend/tests/: conftest.py  test_api.py
backend/tests/integration/: test_analysis.py  test_auth.py  test_dashboard.py  test_diagnostics.py  test_projects.py  test_queries.py
docker/: Dockerfile.backend  (+3 more)
(+187 files in other folders)
